[project]
name = "knowledge-engine"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.0",
  "httpx>=0.27.0",
  "python-multipart>=0.0.9",
  "sse-starlette>=2.0.0",
  "numpy>=1.26.0",
  # PostgreSQL + pgvector
  "asyncpg>=0.30.0",
  "pgvector>=0.3.6",
  # Redis caching
  "redis[hiredis]>=5.0.0",
  # LangGraph RAG workflow
  "langgraph>=0.2.0",
  # Text chunking
  "langchain-text-splitters>=0.3.0",
  "tiktoken>=0.7.0",
  # Document parsing
  "PyMuPDF>=1.24.0",
  "python-docx>=1.1.0",
  "trafilatura>=1.12.0",
  "pysrt>=1.1.2",
]

[project.optional-dependencies]
harvester = [
  "playwright>=1.40.0",
  "cryptography>=42.0.0",
]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.27.0",
]
