[project]
name = "video-analysis"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.0",
  "python-multipart>=0.0.20",
  "httpx>=0.28.0",
  "google-generativeai>=0.8.0",
  "matplotlib>=3.9.0",
  "opencv-python-headless>=4.9.0",
  "librosa>=0.10.0",
  "faster-whisper>=1.0.0",
]

[project.optional-dependencies]
ml = [
  "paddleocr>=2.7.0",
  "paddlepaddle>=2.6.0",
  "mediapipe>=0.10.0",
  "insightface>=0.7.0",
  "deepface>=0.0.80",
  "openai-whisper>=20231117",
]
